# home-publication-manage

./: CMakeLists.txt  README.md  io.cpp
book/: Book.h
cd/: CD.h
manga/: Manga.h
periodical/: Periodical.h
src/: CMakeLists.txt
src/book/: Book.cpp  Book.h  CMakeLists.txt
src/cd/: CD.cpp  CD.h
src/manage/: manage.cpp
src/manga/: Manga.cpp  Manga.h
src/periodical/: Periodical.cpp  Periodical.h
